add tweaks + inc. regular dod setting in the morning from midnight to 6am

--- a/packages/energy/goodwe_dod.yaml
+++ b/packages/energy/goodwe_dod.yaml
@@ -84,6 +84,9 @@ automation:
       - platform: state
         entity_id: sensor.solcast_forecast
     condition:
+      - condition: state
+        entity_id: timer.main_geyser
+        state: 'idle'
       - condition: or
         conditions:
           - condition: and
