--- a/packages/notifications/scripts.yaml
+++ b/packages/notifications/scripts.yaml
@@ -71,34 +71,43 @@ script:
             {% else %}
               false
             {% endif %}
-      - service: notify.slack
-        data_template:
-          target: "{{ target }}"
-          message: '{{ message }}'
-          data:
-            icon: "{{ icon }}"
-            username: '{{ object }}'
-            blocks_template:
-              - type: section
-                text:
-                  type: mrkdwn
-                  text: '{{ message }}'
-      - condition: template
-        value_template: >
-          {{ (cam != false) }}
-      - service: camera.snapshot
-        data_template:
-          entity_id: '{{ cam }}'
-          filename: "/config/www/cam_captures/script_log.jpg"
-      - delay: 
-          seconds: 2
-      - service: notify.slack
-        data_template:
-          target: "{{ target }}"
-          data:
-            file: 
-              path: "/config/www/cam_captures/script_log.jpg"
-              ### path is now required as of 0.113.0 see https://github.com/home-assistant/home-assistant.io/pull/13860/files
+      - choose:
+        # Turn on between 11am and 2pm for sun times
+        - conditions:
+            - condition: template
+              value_template: >
+                {{ (cam != false) }}
+          sequence:
+            - service: camera.snapshot
+              data:
+                filename: "/config/www/cam_captures/script_log.jpg"
+              target:
+                entity_id: "{{ cam }}"
+            - delay: 
+                seconds: 7
+            - service: notify.slack
+              data:
+                message: '{{ message }}'
+                target: '{{ target }}'                
+                data:
+                  #icon: "{{ icon }}"
+                  #username: '{{ object }}'
+                  file: 
+                    path: "/config/www/cam_captures/script_log.jpg"
+                    ### path is now required as of 0.113.0 see https://github.com/home-assistant/home-assistant.io/pull/13860/files
+        default:
+          - service: notify.slack
+            data_template:
+              target: "{{ target }}"
+              message: '{{ message }}'
+              data:
+                icon: "{{ icon }}"
+                username: '{{ object }}'
+                blocks_template:
+                  - type: section
+                    text:
+                      type: mrkdwn
+                      text: '{{ message }}'
 
   ######################################################################
   # Re-usable script to send alert message
