--- a/packages/energy/goodwe_mode.yaml
+++ b/packages/energy/goodwe_mode.yaml
@@ -58,6 +58,10 @@ automation:
       - condition: numeric_state
         entity_id: sensor.goodwe_battery_soc
         above: '64'
+      # Only if in online/grid mode, else backup might loser power
+      - condition: state
+        entity_id: sensor.goodwe_work_mode_label
+        state: 'Normal (On-Grid)'
     action:
       - service: select.select_option
         target:
