--- a/packages/energy/goodwe_mode.yaml
+++ b/packages/energy/goodwe_mode.yaml
@@ -62,6 +62,10 @@ automation:
       - condition: state
         entity_id: sensor.goodwe_work_mode_label
         state: 'Normal (On-Grid)'
+      # Don't run if tomorrow not going lower than 16% dod eg. over 10kWh
+      - condition: numeric_state
+        entity_id: sensor.solcast_forecast_energy_tomorrow
+        above: '10'
     action:
       - service: select.select_option
         target:
