furhter action testing

--- a/secrets.fake.yaml
+++ b/secrets.fake.yaml
@@ -69,3 +69,95 @@ wifi_iot_dns: 192.168.0.1
 # Telegram Token
 telegram_api_key: abcdefghijklmnopqrstuvw-g
 telegram_frenck: 1111111111
+
+# Home Assistant + Zones
+latitude_home: -33.11111111111111
+longitude_home: 18.66666666666666
+latitude_work: -33.11111111111111
+longitude_work: 18.66666666666666
+latitude_currorosencastle: -33.11111111111111
+longitude_currorosencastle: 18.66666666666666
+
+ha_internal_rest_api_headers: Bearer token
+
+# Alexa
+alexa_client_id: amzn1.application-oa2-client.xxxxxxx
+alexa_client_secret: xxxxxxxx
+
+# Envisalink Alarm Panel
+#evl_host: 10.0.0.18
+evl_host: 1.1.1.1
+evl_user: user
+evl_pass: user
+evl_pin: '0000'
+
+# Ezviz cameras
+camera_front: rtsp://admin:xxxxx@1.0.0.1:554/h264_stream
+camera_back: rtsp://admin:xxxx@1.0.0.2:554/h264_stream
+camera_front_stream: https://bi.domain.za.net:443/mjpg/front
+camera_back_stream: https://bi.domain.za.net:443/mjpg/back
+
+# Sureflap
+surepetcareemail: email
+surepetcarepw: password
+surepetcare_household_id: 1
+surepetcare_flap_id: 1
+surepetcare_jessie_id: 1
+surepetcare_ziva_id: 1
+surepetcare_kitchen_flap_id: 1
+
+# Xiaomi Aqara Gateway
+xiaomi_aqara_gw1_key: key
+
+# InfluxDB
+influx_db_hostname: username
+influx_db_user_pw: password
+
+# MQTT
+host_mqtt: comms.domain.za.net
+
+# Slack
+slack_api_key: key
+slackbot_token: "Bearer key"
+slack_app_verification_token: token
+slack_channel_id_alerts_david: id
+slack_channel_id_general: id
+slack_channel_id_alerts: id
+
+
+# 17track
+seventeentrack_user: email
+seventeentrack_pass: pass
+
+# Tuya
+geyser_mainbathroom_device_id: x
+geyser_mainbathroom_local_key: x
+geyser_frontbathroom_device_id: x
+geyser_frontbathroom_local_key: x
+server_feed_device_id: x
+server_feed_local_key: x
+
+# Climacell
+climacell_api_key: x
+
+# Solcast
+solcast_api: api
+solcast_resource: resource
+solcast_forecast_resource: https://api.solcast.com.au/rooftop_sites/xxxx/forecasts?format=json&api_key=xxx
+
+
+# midea ac
+midea_ac1_ip: 10.0.0.1
+midea_ac1_id: id
+midea_ac1_token: token
+midea_ac1_k1: key
+
+midea_ac2_ip: 10.0.0.2
+midea_ac2_id: id
+midea_ac2_token: token
+midea_ac2_k1: key
+
+midea_ac3_ip: 10.0.0.3
+midea_ac3_id: id
+midea_ac3_token: token
+midea_ac3_k1: key
