--- a/secrets.fake.yaml
+++ b/secrets.fake.yaml
@@ -69,6 +69,7 @@ wifi_iot_dns: 192.168.0.1
 # Telegram Token
 telegram_api_key: abcdefghijklmnopqrstuvw-g
 telegram_frenck: 1111111111
+telegram_bot_key: 1111111111:xxxxxxxx
 
 # Home Assistant + Zones
 latitude_home: -33.11111111111111
