changes required to upgrade HA past ersion 2022.2.4

--- a/logging/logger.yaml
+++ b/logging/logger.yaml
@@ -16,6 +16,7 @@ logs:
   homeassistant.config: debug
   homeassistant.helpers.entity: error
   homeassistant.helpers.script: debug
+  homeassistant.loader: error
 
   custom_components.localtuya: fatal
 
