--- a/packages/cover_garage_doors.yaml
+++ b/packages/cover_garage_doors.yaml
@@ -11,15 +11,15 @@ cover:
         open_cover:
           service: switch.turn_on
           data:
-            entity_id: switch.garagedoor_front_garagedoor_front
+            entity_id: switch.garagedoor_front
         close_cover:
           service: switch.turn_on
           data:
-            entity_id: switch.garagedoor_front_garagedoor_front
+            entity_id: switch.garagedoor_front
         stop_cover:
           service: switch.turn_on
           data:
-            entity_id: switch.garagedoor_front_garagedoor_front
+            entity_id: switch.garagedoor_front
         icon_template: >-
           {% if is_state('binary_sensor.front_garage_door_window', 'on') %}
             mdi:garage-open
